--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
@@ -13,11 +13,15 @@
         Background="#FFD4D4E4"
         Title="Software Innovation for Dual Screen Notebook"
         Closing="CloseWindow"
-     
+        PreviewMouseDown="CloseBtnMenu"
+        WindowStartupLocation="CenterScreen" 
+        Loaded="OnLoad"
         >
+    
     <Grid x:Name="myGrid">
         <TextBlock TextAlignment="Center" FontSize="24" Margin="180,10,180,229">
             <Bold>Applications</Bold>
+            
         </TextBlock>
         
         <ScrollViewer Name="ButtonViewholder" PreviewMouseWheel="ScrollHorizontally" PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,25,0,0">
@@ -25,7 +29,9 @@
                 <!-- This is where the dynamic applications will be placed -->
             </StackPanel>
         </ScrollViewer>
-        
+
+        <TextBlock Name="EmptyApplications" Text="Click on the + button or click on the = key to add an application" FontSize="18" Margin="0,0,0,30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
         <!-- Options to remove button and cancel -->
         <StackPanel x:Name="btnMenu" Width="100" Height="80" Visibility="Hidden" Margin="10,0,0,30" VerticalAlignment="Bottom" HorizontalAlignment="Left">
             <Button Width="100" Height="40" Click="removeBtn" Background="GhostWhite" x:Name="rBtn" Content="Remove Button" Margin="0,0,0,0" />
@@ -34,6 +40,6 @@
         
         <!--Added the help and add buttons to the bottom-->
         <Button Content="HELP" x:Name="helpButton" Height="75" Width="90" Margin="0,0,175,-200"  Opacity="5.5"  Click="Help_Click" BorderThickness="2" ClipToBounds="True"/>
-        <Button Content="+" x:Name="addButton" Height="75" Width="90" Margin="0,0,-175,-200"  Opacity="5.5" KeyDown="Add_KeyDown" Click="Add_Click" BorderThickness="2" ClipToBounds="True"/>
+        <Button Content="+" x:Name="addButton" Height="75" Width="90" Margin="0,0,-175,-200"  Opacity="5.5" KeyUp="Add_KeyUp" Click="Add_Click" BorderThickness="2" ClipToBounds="True"/>
     </Grid>
 </Window>
