--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -48,9 +48,9 @@
                 <!-- <Button x:Name="gaming_use_case" Width="150" Background="BlanchedAlmond" BorderThickness="0" Margin="-950, 0, 0, 0" Click="open_gaming_case">
                     <TextBlock Text="Gaming Use Case"/>
                 </Button> -->
-                <Slider Name="VolumeSlider" Margin="-950, 0, 0, 0" Width="300" Height="20"
+                <!--<Slider Name="VolumeSlider" Margin="-950, 0, 0, 0" Width="300" Height="20"
                     Maximum="100" Minimum="0" ValueChanged="VolumeSlider_ValueChanged">
-                </Slider>
+                </Slider> -->
             </StackPanel>
 
         </Grid>
