--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -30,17 +30,17 @@
 
 
             <StackPanel x:Name="bottomBar" Visibility="Hidden" Canvas.Bottom="0" Orientation="Horizontal" VerticalAlignment="Bottom" Height="65" Background="Gainsboro" HorizontalAlignment="Right" Width="962" Canvas.Left="3" Canvas.Top="367" Margin="0,0,1,-15">
-                <Button x:Name="media_back" Content="{materialDesign:PackIcon Kind=FastRewind, Size=20}" Width="51" Background="Gainsboro" Click="media_back_Click" BorderThickness="0"/>
-                <Button x:Name="media_play_pause" Content="{materialDesign:PackIcon Kind=PlayPause, Size=20}" Width="67" Background="Gainsboro" Click="media_play_pause_Click" BorderThickness="0"/>
-                <Button x:Name="media_forward" Content="{materialDesign:PackIcon Kind=FastForward, Size=20}" Width="51" Background="Gainsboro" Click="media_forward_Click" BorderThickness="0"/>
-                <GridSplitter Width="573" Background="Gainsboro"/>
-                <Button x:Name="undo" Content="{materialDesign:PackIcon Kind=UndoVariant, Size=20}" Width="51" Background="Gainsboro" Click="undo_Click" BorderThickness="0"/>
-                <Button x:Name="redo" Content="{materialDesign:PackIcon Kind=RedoVariant, Size=20}" Width="51" Background="Gainsboro" Click="redo_Click" BorderThickness="0"/>
-                
+                <Button Cursor="Hand" ToolTip="Previous" x:Name="media_back" Content="{materialDesign:PackIcon Kind=FastRewind, Size=20}" Width="51" Background="Gainsboro" Click="media_back_Click" BorderThickness="0"/>
+                <Button Cursor="Hand" ToolTip="Play/Pause" x:Name="media_play_pause" Content="{materialDesign:PackIcon Kind=PlayPause, Size=20}" Width="67" Background="Gainsboro" Click="media_play_pause_Click" BorderThickness="0"/>
+                <Button Cursor="Hand" ToolTip="Forward"  x:Name="media_forward" Content="{materialDesign:PackIcon Kind=FastForward, Size=20}" Width="51" Background="Gainsboro" Click="media_forward_Click" BorderThickness="0"/>
+                <GridSplitter Cursor="Arrow" Width="573" Background="Gainsboro"/>
+                <Button ToolTip="Undo Last Action" Cursor="Hand" x:Name="undo" Content="{materialDesign:PackIcon Kind=UndoVariant, Size=20}" Width="51" Background="Gainsboro" Click="undo_Click" BorderThickness="0"/>
+                <Button ToolTip="Redo Last Action" Cursor="Hand" x:Name="redo" Content="{materialDesign:PackIcon Kind=RedoVariant, Size=20}" Width="51" Background="Gainsboro" Click="redo_Click" BorderThickness="0"/>
+
             </StackPanel>
 
         </Grid>
 
-
+        
     </ScrollViewer>
 </Window>
