Reading from file is faster now.

--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
@@ -18,6 +18,7 @@
         PreviewMouseDown="CloseBtnMenu"
         WindowStartupLocation="CenterScreen" 
         Loaded="OnLoad"
+        MouseLeftButtonDown="FocusOnWindow"
         >
 
     <Grid x:Name="myGrid">
