--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/GamingUseCase.xaml
@@ -7,32 +7,32 @@
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Height="365" Width="970"
+        Height="365" Width="575"
         MinHeight="365"
         MaxHeight="365"
         MinWidth="575"
-        KeyDown="KeyInteractor"
+        KeyUp="KeyInteractor"
         Background="#FFD4D4E4"
         Title="Software Innovation for Dual Screen Notebook"
         Closing="CloseWindow"
         PreviewMouseDown="CloseBtnMenu"
         WindowStartupLocation="CenterScreen" 
         Loaded="OnLoad"
-        MouseLeftButtonDown="FocusOnWindow"
+        MouseLeftButtonUp="ForceFocusOnWindow"
         >
 
     <Grid x:Name="myGrid">
-        <TextBlock TextAlignment="Center" FontSize="24" Margin="180,10,180,229">
+        <TextBlock TextAlignment="Center" FontSize="24" Margin="180,10,180,290">
             <Bold>Applications</Bold>
         </TextBlock>
         
-        <ScrollViewer Name="ButtonViewholder" PreviewMouseWheel="ScrollHorizontally" PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,25,0,0">
-            <StackPanel Name="MyStack" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" Height="196" VerticalAlignment="Top" x:FieldModifier="public">
+        <ScrollViewer Name="ButtonViewholder"  PreviewMouseWheel="ScrollHorizontally" PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
+            <StackPanel Name="MyStack" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" x:FieldModifier="public">
                 <!-- This is where the dynamic applications will be placed -->
             </StackPanel>
         </ScrollViewer>
 
-        <TextBlock Name="EmptyApplications" Text="Click on the + button or click on the = key to add an application" FontSize="18" Margin="0,0,0,30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock Name="EmptyApplications" Text="Touch/Click on the ADD button or click on the = key to add an application" FontSize="16" FontWeight="Bold" FontStyle="Italic" Margin="0,0,0,30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <!-- Options to remove button and cancel -->
         <StackPanel x:Name="btnMenu" Width="100" Height="120" Margin="20,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Visibility="Hidden">
@@ -43,9 +43,11 @@
         
         <!-- Added the help, clear, and add buttons to the bottom -->
 
-        <Button Content="HELP" x:Name="helpButton" Height="75" Width="90" Margin="0,0,200,-200" Opacity="5.5" Click="Help_Click" BorderThickness="2" ClipToBounds="True" ToolTip="Click to Get Help from GitHub"/>
-        <Button Content="CLEAR" x:Name="clearButton" Height="75" Width="90" Margin="0,0,0,-200" Opacity="5.5"  Click="Clear_Click" BorderThickness="2" ClipToBounds="True" ToolTip="Click to Clear All Applications"/>
-        <Button Content="+" x:Name="addButton" Height="75" Width="90" Margin="0,0,-200,-200"  Opacity="5.5" KeyUp="Add_KeyUp" Click="Add_Click" BorderThickness="2" ClipToBounds="True" ToolTip="Click To Add an Application"/>
+        <Button Content="HELP" x:Name="helpButton" Height="75" Width="90" Margin="0,0,200,-200" Opacity="5.5" Click="Help_Click" BorderThickness="1" ClipToBounds="True" ToolTip="Click to Get Help from GitHub"/>
+        <Button Content="CLEAR" x:Name="clearButton" Height="75" Width="90" Margin="0,0,0,-200" Opacity="5.5"  Click="Clear_Click" BorderThickness="1" ClipToBounds="True" ToolTip="Click to Clear All Applications"/>
+        <Button Content="ADD" x:Name="addButton" Height="75" Width="90" Margin="0,0,-200,-200"  Opacity="5.5" KeyUp="Add_KeyUp" Click="Add_Click" BorderThickness="1" ClipToBounds="True" ToolTip="Click to Add an Application"/>
+        <Button Content="SAVE" x:Name="saveButton" Height="30" Width="90" Margin="70,-75,400,200" Opacity="5.5" Click="Save_Click" BorderThickness="1" HorizontalAlignment="Left" ClipToBounds="True" ToolTip="Click to Save Layouts (Or Ctrl S)"/>
+        <Button Content="MOVE" x:Name="moveButton" Height="70" Width="70" Margin="0,0,30,-200" Opacity="5.5" PreviewMouseLeftButtonDown="MoveWindow" BorderThickness="1" HorizontalAlignment="Right" PreviewTouchDown="MoveWindowTouch" ClipToBounds="True" ToolTip="Touch/Click and hold to drag Window"/>
 
     </Grid>
 
