--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/AddButtonWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/AddButtonWindow.xaml
@@ -10,41 +10,41 @@
         Height="428.249" Width="399.127"
         Background="White">
 
-    <StackPanel x:Name="content" Background="#00F8F8FF" Margin="26,30,21,10">
+    <StackPanel x:Name="content" Background="#00F8F8FF" Margin="26,16,21,0">
              
-        <TextBlock Text="Shortcut Name: "/>
+        <TextBlock Text="Shortcut Name: " FontSize="14"/>
         <TextBox x:Name="nameInput" ToolTip="This name will be displayed on the button"
                     Width="338"
                     Height="36"
                     HorizontalAlignment="Left"
                  Style="{StaticResource TextBoxRevealStyle}" TextChanged="nameInput_TextChanged">
         </TextBox>
-        <TextBlock Text="Application(s) to open (seperated by a comma):" Margin="0,20,0,0"/>
+        <TextBlock Text="Application(s) to open (seperated by a comma):" FontSize="14" Margin="0,20,0,0"/>
         <Grid>
 
             <StackPanel Orientation="Vertical" Panel.ZIndex="0">
                 <StackPanel Panel.ZIndex="0" Orientation="Horizontal" Margin="0,10,0,0">
                     <TextBox x:Name="appInput" ToolTip="Click on Choose File to select Apps to launch with your button"
                     Width="250"
-                    Height="34"
+                    Height="36"
                     HorizontalAlignment="Left"
                     Style="{StaticResource TextBoxRevealStyle}">
                     </TextBox>
                     <Button x:Name="mainFileBrowser" Content="Choose File" Height="35" Width="80" Click="revealFileUploadOptions"  HorizontalAlignment="Right" Margin="10,0,10,0" Style="{StaticResource ButtonRevealStyle}" Background="Transparent"/>
                 </StackPanel>
-                <TextBlock Text="Add a keyboard shortcut:" Margin="0,20,0,0"/>
+                <TextBlock Text="Add a keyboard shortcut:" FontSize="14" Margin="0,20,0,0"/>
 
 
                 <StackPanel Orientation="Horizontal" Cursor="Hand">
-                    <ComboBox Style="{StaticResource MaterialDesignComboBox}"  Cursor="Hand" Margin="0,10,0,0" x:Name="keyEnum" ItemsSource="{Binding Source={StaticResource enmKey}}" Width="299" Height="25" SelectionChanged="keyEnum_SelectionChanged" IsEditable="True" Background="White" BorderBrush="#FFABADB3" ToolTip="Select a sequences of keys to bind to your button"/>
+                    <ComboBox Style="{StaticResource MaterialDesignComboBox}"  Cursor="Hand" Margin="0,10,0,0" x:Name="keyEnum" ItemsSource="{Binding Source={StaticResource enmKey}}" Width="299" Height="25" SelectionChanged="keyEnum_SelectionChanged" IsEditable="True" Background="#FFD4D4E4" BorderBrush="#FFABADB3" ToolTip="Select a sequences of keys to bind to your button"/>
                     <Button x:Name="addKey" Content="{materialDesign:PackIcon Kind=Add}" VerticalAlignment="Bottom" Background="Transparent" Click="Click_Addkey" Width="29" Height="30" Margin="10,0,0,0" Style="{StaticResource ButtonRevealStyle}"/>
                 </StackPanel>
                 <WrapPanel x:Name="hotkeyDisplay" Orientation="Horizontal" MinHeight="40" Height="auto" Width="353">
 
                 </WrapPanel>
                 <Grid HorizontalAlignment="Center" Margin="10,-5,10,0" Width="332" Height="89">
-                    <Button Cursor="Hand" x:Name="cancel_btn" Content="Cancel" Click="Click_Cancel" Background="PaleVioletRed" HorizontalAlignment="Left" Margin="10,23,0,20" Width="141" VerticalAlignment="Center" Height="46"  Style="{StaticResource ButtonRevealStyle}"/>
-                    <Button Cursor="Hand" ToolTip="Tip: Right Click on your new button to make edits"  x:Name="confirm_btn" Content="Add Button" Click="Click_Confirm" Background="LightBlue" HorizontalAlignment="Right" Margin="0,23,10,20" Width="141" VerticalAlignment="Center" Height="46"  Style="{StaticResource ButtonRevealStyle}"/>
+                    <Button Cursor="Hand" FontSize="14" x:Name="cancel_btn" Content="Cancel" Click="Click_Cancel" Background="PaleVioletRed" HorizontalAlignment="Left" Margin="10,23,0,20" Width="141" VerticalAlignment="Center" Height="46"  Style="{StaticResource ButtonRevealStyle}"/>
+                    <Button Cursor="Hand" FontSize="14" ToolTip="Tip: Right Click on your new button to make edits"  x:Name="confirm_btn" Content="Add Button" Click="Click_Confirm" Background="LightBlue" HorizontalAlignment="Right" Margin="0,23,10,20" Width="141" VerticalAlignment="Center" Height="46"  Style="{StaticResource ButtonRevealStyle}"/>
                 </Grid>
             </StackPanel>
 
