Added a toggle open on ScreenPad Plus or not.

--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -15,6 +15,7 @@
         AllowsTransparency="True"
         Loaded="OnLoad"
         WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize"
         
         >
 
