save layouts, open when starting computer

--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/App.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/App.xaml
@@ -4,7 +4,8 @@
              xmlns:local="clr-namespace:KeyStrokes"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:enm="clr-namespace:KeyStrokes"
-             StartupUri="MainWindow.xaml">
+             Startup="App_Startup"
+             Exit="App_Exit">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
